[gd_scene load_steps=2 format=3 uid="uid://c30d7s6mqmwnq"]

[ext_resource type="Script" uid="uid://binglemuis50k" path="res://scenes/UI/new_game.gd" id="1_gkfa7"]

[node name="new_game" type="CanvasLayer"]
script = ExtResource("1_gkfa7")

[node name="lbl_ready" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.0
offset_right = 341.0
offset_bottom = 273.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 200
text = "Ready?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_countdown" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -171.0
offset_right = 106.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 250
text = "3!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="timer_countdown" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="timer_countdown" to="." method="_on_timer_countdown_timeout"]
